--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   "author": "Levon Avetyan",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^7.2.2",
+    "cssnano": "^3.10.0",
     "grunt": "^1.0.1",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-wp-i18n": "^1.0.1",
+    "pixrem": "^4.0.1"
+  },
+  "dependencies": {
+    "sortablejs": "^1.7.0"
   }
 }
